# ros-snaps-examples

./: CONTRIBUTING.md  README.md
.github/workflows/: example_snap_github_action.yaml  keep_alive.yaml  private_code_snap_github_action.yaml  test.yml
components_stage_snap_foxy_core20/: README.md
components_stage_snap_foxy_core20/ros2_listener_component/: CMakeLists.txt  package.xml
components_stage_snap_foxy_core20/ros2_listener_component/include/ros2_listener_component/: listener.hpp
components_stage_snap_foxy_core20/ros2_listener_component/snap/: snapcraft.yaml
components_stage_snap_foxy_core20/ros2_listener_component/src/: listener.cpp
components_stage_snap_foxy_core20/ros2_talker_component/: CMakeLists.txt  package.xml
components_stage_snap_foxy_core20/ros2_talker_component/include/ros2_talker_component/: talker.hpp
components_stage_snap_foxy_core20/ros2_talker_component/launch/: talker_listener_components.launch.py
components_stage_snap_foxy_core20/ros2_talker_component/snap/: snapcraft.yaml
components_stage_snap_foxy_core20/ros2_talker_component/src/: talker.cpp
content_sharing_humble_core22/: README.md
content_sharing_humble_core22/snap/: snapcraft.yaml
content_sharing_jazzy_core24/: README.md
content_sharing_jazzy_core24/snap/: snapcraft.yaml
github_action/: README.md  example_snap_github_action.yaml
github_action/snap/: snapcraft.yaml
github_action_private_source/: private_code_snap_github_action.yaml  snapcraft.yaml
non_lts_galactic/: README.md
non_lts_galactic/snap/: snapcraft.yaml
orchestration/ROS-2-humble/snap/local/: command-chain-talker.sh  listener-waiter.sh  post-stop-command.sh
orchestration_humble_core22/: README.md
orchestration_humble_core22/snap/: snapcraft.yaml
orchestration_humble_core22/snap/local/: stop-command.sh
ros_opt_data_noetic_core22/scripts/: cat_files_content.sh
ros_opt_data_noetic_core22/snap/: snapcraft.yaml
rosinstall_noetic_core20/: README.md  snapped_ros1_pkg.rosinstall
rosinstall_noetic_core20/snap/: snapcraft.yaml
shared_memory_foxy_core20/: README.md
shared_memory_foxy_core20/disable-shared-memory-compile-time/snap/: snapcraft.yaml
shared_memory_foxy_core20/disable-shared-memory-run-time/snap/: snapcraft.yaml
shared_memory_foxy_core20/disable-shared-memory-run-time/snap/local/: fastdds_no_shared_memory.xml
shared_memory_foxy_core20/private-shared-memory/snap/: snapcraft.yaml
shared_memory_foxy_core20/public-shared-memory/: README.md
shared_memory_foxy_core20/public-shared-memory/snap/: snapcraft.yaml
source_pkg_dashing_core18/: README.md
source_pkg_dashing_core18/snap/: snapcraft.yaml
source_pkg_dashing_core18/snapped_ros2_pkg/: package.xml
source_pkg_dashing_core18/snapped_ros2_pkg/launch/: snapped.launch.py
source_pkg_foxy_core20/: README.md
source_pkg_foxy_core20/snap/: snapcraft.yaml
source_pkg_humble_core22/: README.md
source_pkg_humble_core22/snap/: snapcraft.yaml
source_pkg_jazzy_core24/: CMakeLists.txt  README.md  package.xml
source_pkg_jazzy_core24/launch/: snapped.launch.py
source_pkg_jazzy_core24/snap/: snapcraft.yaml
source_pkg_jazzy_core24/src/: snapped_ros2_pkg_node.cpp
source_pkg_lyrical_core26/: CMakeLists.txt  README.md
source_pkg_lyrical_core26/config/: config.yaml
source_pkg_lyrical_core26/snap/: snapcraft.yaml
source_pkg_lyrical_core26/src/: snapped_ros2_pkg_node.cpp
source_pkg_melodic_core18/: README.md
source_pkg_melodic_core18/snap/: snapcraft.yaml
source_pkg_melodic_core18/snapped_ros1_pkg/: CMakeLists.txt
source_pkg_melodic_core18/snapped_ros1_pkg/config/: config.yaml
source_pkg_melodic_core18/snapped_ros1_pkg/src/: node.cpp
source_pkg_noetic_core20/: CMakeLists.txt  README.md  package.xml
source_pkg_noetic_core20/config/: config.yaml
source_pkg_noetic_core20/launch/: snapped.launch
source_pkg_noetic_core20/snap/: snapcraft.yaml
source_pkg_noetic_core20/src/: node.cpp
talker_listener_zenoh_core24/: README.md
talker_listener_zenoh_core24/snap/: snapcraft.yaml
