<?xml version="1.0"?>
<package format="2">
  <name>snapped_ros1_pkg</name>
  <version>0.0.0</version>
  <description>The snapped_ros1_pkg package</description>

  <maintainer email="guillaume.beuzeboc@canonical.com">guillaume</maintainer>

  <license>GPLv3</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>roscpp</build_depend>
  <build_export_depend>geometry_msgs</build_export_depend>
  <build_export_depend>roscpp</build_export_depend>
  <exec_depend>geometry_msgs</exec_depend>
  <exec_depend>roscpp</exec_depend>
  
</package>
